--- a/package.json
+++ b/package.json
@@ -17,5 +17,15 @@
         "tailwindcss": "^3.2.1",
         "vite": "^5.0",
         "vue": "^3.4.0"
+    },
+    "dependencies": {
+        "@tiptap/extension-link": "^2.3.0",
+        "@tiptap/extension-underline": "^2.3.0",
+        "@tiptap/pm": "^2.3.0",
+        "@tiptap/starter-kit": "^2.3.0",
+        "@tiptap/vue-3": "^2.3.0",
+        "tinymce": "^7.0.1",
+        "v-editor": "^0.2.0",
+        "vue-quill-editor": "^3.0.6"
     }
 }
