--- a/package.json
+++ b/package.json
@@ -3,19 +3,25 @@
     "type": "module",
     "scripts": {
         "dev": "vite",
-        "build": "vite build"
+        "build": "vite build",
+        "test": "jest"
     },
     "devDependencies": {
+        "@babel/core": "^7.24.4",
+        "@babel/preset-env": "^7.24.4",
         "@inertiajs/vue3": "^1.0.0",
         "@tailwindcss/forms": "^0.5.3",
         "@vitejs/plugin-vue": "^5.0.0",
         "autoprefixer": "^10.4.12",
-        "axios": "^1.6.4",
+        "axios": "^1.6.8",
+        "babel-jest": "^29.7.0",
         "daisyui": "^4.10.1",
+        "jest": "^29.7.0",
         "laravel-vite-plugin": "^1.0",
         "postcss": "^8.4.31",
         "tailwindcss": "^3.2.1",
         "vite": "^5.0",
+        "vitest": "^1.5.0",
         "vue": "^3.4.0"
     },
     "dependencies": {
@@ -27,5 +33,10 @@
         "tinymce": "^7.0.1",
         "v-editor": "^0.2.0",
         "vue-quill-editor": "^3.0.6"
+    },
+    "jest": {
+        "transform": {
+            "^.+\\.js$": "babel-jest"
+        }
     }
 }
