--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "vue": "^3.4.0"
     },
     "dependencies": {
+        "@inertiajs/inertia": "^0.11.1",
         "@tiptap/extension-link": "^2.3.0",
         "@tiptap/extension-underline": "^2.3.0",
         "@tiptap/pm": "^2.3.0",
